Atualização e inserção de nova fonte no arquivo css, correção de alinhamentos

--- a/layout.html
+++ b/layout.html
@@ -4,19 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Proj</title>
+    <title>Cafeteria ToonZ</title>
     <link rel="stylesheet" href="css/cafeteria.css">
 </head>
 
 <body>
     <header>
-        <!-- vamos usar a TAG H1 para definir o título do nosso site
-        a TAG H1 deve aparecer apenas uma vez na página -->
-        <h1>Cafeteria Proj</h1>
-
+        
         <!--Criar a estrutura de links usando 
             uma lista não ordenada  -->
         <nav>
+            
+            <!-- vamos usar a TAG H1 para definir o título do nosso site
+        a TAG H1 deve aparecer apenas uma vez na página -->
+        <h1>Cafeteria ToonZ</h1>
+
             <ul>
                 <li><a href="index.html"> home </a></li>
                 <li><a href="cardapio.html"> cadárpio </a></li>
