fim do css layout

--- a/layout.html
+++ b/layout.html
@@ -43,7 +43,7 @@
             Tel.: 11 -9999-9999 | 11 - 88888-8888
         </div>
 
-        <div id="redes sociais">
+        <div id="redesSociais">
             <ul>
                 <li>
                     <a href="https://www.facebook.com/?locale=pt_BR" target="_blank">
