Finalização da pagina main e formação css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,22 @@
             corrupti dolorem voluptas vel!</p>
 
     </header>
-    <main></main>
+    <main>
+        <h2>Bem vindo a nossa cafeteria!</h2>
+        
+        <div id="home">
+        <p><span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia inventore non, officiis, beatae aliquam laudantium itaque, magni laborum blanditiis consequatur dicta? Quae facilis fugit maxime velit, deleniti molestiae. Atque, maiores.</span><span>Fugit illo repellat delectus excepturi! Quod necessitatibus, esse quia quaerat et dignissimos blanditiis vitae pariatur. Rem blanditiis asperiores sapiente nulla non, minima sed itaque cumque dolores ad quis odit voluptatibus?</span><span>Illum repudiandae nam ipsa quasi, odit expedita excepturi dicta nostrum eum voluptatibus eius necessitatibus explicabo architecto mollitia exercitationem, eveniet nobis quos neque eaque laudantium, deserunt tempore quis! Alias, autem maiores?</span></p>
+        <p><span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet quasi fuga fugiat, numquam est nam alias voluptatibus aliquam nemo illo consequuntur quidem dolore necessitatibus repellendus, ab culpa deserunt totam! Doloribus.</span><span>Aliquid repudiandae debitis amet officia libero minus inventore architecto neque ad deserunt accusantium odio facilis, ipsam sequi veritatis pariatur vel modi rerum? Ex soluta dolorem voluptas culpa et incidunt necessitatibus.</span><span>Et accusantium consequuntur blanditiis error nulla, eligendi, cum similique dignissimos velit, recusandae aliquid omnis enim nesciunt placeat officiis in doloremque. Non earum ab quia laboriosam, incidunt modi deserunt aliquid consectetur?</span></p>
+        <p><span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit consequuntur officiis quia cupiditate aliquid doloribus labore aspernatur facilis nam, necessitatibus quam doloremque, saepe repellat ab odit esse laboriosam harum dicta.</span><span>Optio quia maiores, quae laudantium dignissimos minima esse mollitia illum officiis possimus pariatur placeat veritatis magni ipsa fugiat architecto quis repudiandae non eum modi temporibus culpa! Modi accusamus quam praesentium.</span><span>Consequatur similique et ab veritatis aspernatur cum optio rerum autem mollitia, fugiat ad blanditiis exercitationem quis vitae porro modi dolorum quod accusantium suscipit iure nostrum accusamus reiciendis? Perspiciatis, cupiditate ad?</span></p>
+    </div>
+
+        <div id="imghome">   
+        <img src="img/tomandocafe9.jpg" alt="">
+        <img src="img/tomandocafe10.jpg" alt="">
+    </div>
+
+
+    </main>
     <footer>
         <div id="end">
             Rua Torque truqs , 220 - Jardim das Manivelas<br>
