fim da página quem somos e cardápio

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -35,7 +35,18 @@
             corrupti dolorem voluptas vel!</p>
 
     </header>
-    <main></main>
+    <main>
+        <h2>Quem Somos</h2>
+
+        <p><span>A Cafeteria Toonz é mais do que um simples espaço para tomar café. Somos um refúgio para os amantes de boa música, arte e, é claro, café excepcional. Fundada com a paixão por proporcionar experiências sensoriais únicas, combinamos o aroma irresistível do café fresco com um ambiente acolhedor e 
+            uma trilha sonora selecionada cuidadosamente para criar momentos memoráveis para nossos clientes. Seja para uma pausa rápida durante o dia ou para uma tarde relaxante entre amigos, na 
+            Cafeteria Toonz, todos são bem-vindos a saborear o melhor da vida em cada xícara..</span></p>
+        
+        <div id="video">
+            <iframe src="https://www.youtube.com/embed/72kUZ1LaI7U?si=sRp3o-HGekJB_f0J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+    </main>
     <footer>
         <div id="end">
             Rua Torque truqs , 220 - Jardim das Manivelas<br>
