inserção e estilização de formulário na guia contato

--- a/contato.html
+++ b/contato.html
@@ -35,7 +35,29 @@
             corrupti dolorem voluptas vel!</p>
 
     </header>
-    <main></main>
+    <main>
+        <h2> Entre em contato</h2>
+        <form>
+            <input type="text" placeholder="Nome Completo" required>
+            <input type="tel" placeholder="Telefone" required maxlength="11">
+            <input type="email" placeholder="E-MAIL">
+            <select name="" id="">
+                <option value="Selecione">Selecione um assunto</option>
+                <option value="Sugestão">Sugestão</option>
+                <option value="Reclamação">Reclamação</option>
+                <option value="Elogio">Elogio</option>
+                <option value="Dúvida">Dúvida</option>
+                <option value="Solicitação">Solicitação</option>
+
+            </select>
+            <textarea></textarea>
+            <span><input type="checkbox">Desejo receber notícias</span>
+
+            <input type="submit" value="Enviar">
+            
+        </form>
+        
+    </main>
     <footer>
         <div id="end">
             Rua Torque truqs , 220 - Jardim das Manivelas<br>
