finalizaçao botão whats e atuaização de font

--- a/contato.html
+++ b/contato.html
@@ -36,7 +36,7 @@
 
     </header>
     <main>
-        <h2> Entre em contato</h2>
+        <h2> Fale conosco</h2>
         <form>
             <input type="text" placeholder="Nome Completo" required>
             <input type="tel" placeholder="Telefone" required maxlength="11">
@@ -83,6 +83,10 @@
             </ul>
         </div>
     </footer>
+
+    <div id="whatsapp">
+        <a href="https://wa.me/5511977412926" target="_blank">
+            <img src="img/logopupwhat.png" alt="Contato whatsapp"></a></div>
 
 </body>
 
