--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
         </div>
     </footer>
 
+    <div id="whatsapp">
+        <a href="https://wa.me/5511977412926" target="_blank">
+            <img src="img/logopupwhat.png" alt="Contato whatsapp"></a></div>
+
 </body>
 
 </html>
